hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_static_member_03.php.exp
File "protected_static_member_03.php", line 30, characters 11-20:
No static method `accessible` in `T` (Typing[4090])
  File "protected_static_member_03.php", line 29, characters 19-21:
  Did you mean instance method `foo` instead?
  File "protected_static_member_03.php", line 28, characters 7-7:
  Declaration of `T` is here
File "protected_static_member_03.php", line 37, characters 11-12:
No static method `me` in `E` (Typing[4090])
  File "protected_static_member_03.php", line 25, characters 29-38:
  Did you mean `accessible` instead?
  File "protected_static_member_03.php", line 22, characters 7-7:
  Declaration of `E` is here
File "protected_static_member_03.php", line 37, characters 11-12:
No static method `me` in `T2` (Typing[4090])
  File "protected_static_member_03.php", line 35, characters 19-21:
  Did you mean instance method `foo` instead?
  File "protected_static_member_03.php", line 34, characters 7-8:
  Declaration of `T2` is here
File "protected_static_member_03.php", line 47, characters 11-12:
No static method `me` in `Treq` (Typing[4090])
  File "protected_static_member_03.php", line 25, characters 29-38:
  Did you mean `accessible` instead?
  File "protected_static_member_03.php", line 41, characters 7-10:
  Declaration of `Treq` is here
File "protected_static_member_03.php", line 30, characters 11-20:
You cannot access this member (Typing[4112])
  File "protected_static_member_03.php", line 13, characters 27-36:
  This member is private
